# objectstorex

./: .credo.exs  .dialyzer_ignore.exs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  coveralls.json  mix.exs
.github/workflows/: ci.yml  nif-release.yml
@pm/epics/: OBX001_exec.md  OBX002_exec.md  OBX004_exec.md  OBX005_exec.md
examples/: distributed_lock.ex  http_cache.ex  optimistic_counter.ex
examples/backup_service/: README.md  mix.exs
examples/distributed_cache/: README.md  mix.exs
examples/file_uploader/: README.md  mix.exs
guides/: configuration.md  distributed_systems.md  error_handling.md  getting_started.md  streaming.md
lib/: objectstorex.ex
lib/objectstorex/: attributes.ex  downloader.ex  error.ex  errors.ex  native.ex  put_mode.ex  range.ex  stream.ex
native/objectstorex/: Cargo.toml
native/objectstorex/.cargo/: config.toml
native/objectstorex/src/: atoms.rs  builders.rs  errors.rs  lib.rs  operations.rs  store.rs  streaming.rs  types.rs
objectstorex-0.1.0/: LICENSE  README.md  hex_metadata.config
test/: attributes_test.exs  bulk_test.exs  conditional_copy_test.exs  documentation_test.exs  error_handling_test.exs  error_module_test.exs  get_options_test.exs  list_test.exs  objectstorex_test.exs  obx005_1a_mix_configuration_test.exs  obx005_2a_native_configuration_test.exs  obx005_3a_rust_configuration_test.exs  obx005_4a_cicd_validation_test.exs  obx005_6a_release_process_test.exs  package_validation_test.exs  performance_test.exs  put_mode_test.exs  streaming_test.exs
(+16 files in other folders)
