[package]
name = "objectstorex"
version = "0.1.0"
authors = ["ObjectStoreX Contributors"]
edition = "2021"
rust-version = "1.86.0"

[lib]
name = "objectstorex"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35"
object_store = { version = "0.11", features = ["aws", "azure", "gcp", "http"] }
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
chrono = "0.4"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
